unpackaged/main/default/objects/Recovery_Payment__c/Recovery_Payment__c.object-meta.xml
<CustomObject>
    <label>Recovery Payment</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Recovery Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recovery Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>