unpackaged/main/default/objects/Recovery_Payment__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Recovery payment external ID provided by data team to upsert data</description>
    <externalId>true</externalId>
    <inlineHelpText>inserted by data team</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>