unpackaged/main/default/objects/Recovery_Payment__c/fields/Recovery__c.field-meta.xml
<CustomField>
    <fullName>Recovery__c</fullName>
    <label>Recovery</label>
    <referenceTo>Recovery__c</referenceTo>
    <relationshipLabel>Recovery Payments</relationshipLabel>
    <relationshipName>Recovery_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>